# food-pecker

./: .env.example  .gitignore  README.md  foodpanda_scraper.py  grabfood_scraper.py  index.html  metadata.json  package-lock.json  package.json  pyproject.toml
public/: grabfood_results.json
src/: App.tsx  constants.ts  firebase-config.ts  index.css  types.ts  vite-env.d.ts
src/services/: firebaseService.ts  geminiService.ts  groqService.ts  personaSelector.ts
